--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,10 +35,10 @@
   </div>
 
   <script>
-    if ( "serviceWorker" in navigator ) {
-      window.addEventListener( "load", () => {
-        navigator.serviceWorker.register("/sw.js")
-      })
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js')
+      });
     }
   </script>
 
