--- a/_includes/resume_head.html
+++ b/_includes/resume_head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
-  <link rel="stylesheet" href="{{ "/assets/css/resume.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/resume.css" }}">
   {%- feed_meta -%}
   
   {%- include custom-head.html -%}
