--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -1,7 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Old+Standard+TT);
-
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
-
 /* clearfix */
 
 .container:before,
@@ -20,14 +16,14 @@
 }
 
 body {
-  font-family: 'Open Sans','Myriad Pro','Myriad',sans-serif;
+  font-family: 'Myriad Pro','Myriad',sans-serif;
   color: #1D1313;
   font-weight: 300;
   margin:0;
 }
 
 h1, h2, h3, h4, ul dl dt {
-  font-family: 'Old Standard TT',serif;
+  font-family: 'Times',serif;
 }
 
 .container {
