--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -4,9 +4,11 @@
   {%- include resume_head.html -%}
 
   <body>
-
-    {{ content }}
-
+    <div class="container">
+      <div class="resume">
+        {{ content }}
+      </div>
+    </div>
   </body>
 
 </html>
