--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -22,10 +22,6 @@ body {
   margin:0;
 }
 
-strong {
-  font-weight: 700;
-}
-
 h1, h2, h3, h4, ul dl dt {
   font-family: 'Times',serif;
 }
@@ -127,6 +123,10 @@ p {
   display: block;
   font-size: 104%;
   line-height: 24px;
+}
+
+p strong {
+  font-weight: 700;
 }
 
 ul {
