--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,12 +34,39 @@
 
   </div>
 
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/sw.js')
-      });
-    }
-  </script>
-
 </footer>
+
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/sw.js')
+    });
+  }
+</script>
+
+<div class="sub-footer">
+  <div id="skin-switch-container">
+    This page was rendered with the <select id="skin-switch" onchange="changeSkin()">
+      {%- for skin in page.available_skins %}
+      {% if skin == 'classic' -%}
+      <option value="style.css">classic</option>
+      {%- else -%}
+      <option value="{{ skin }}.css">{{ skin }}</option>
+      {%- endif %}
+      {%- endfor %}
+    </select> skin of the Minima theme.
+  </div>
+</div>
+
+<script>
+  document.getElementById("skin-switch-container").style.display = "block";
+  var metaTag = document.getElementById("stylesheet");
+  var SSHref = metaTag.href;
+  var SSName = (SSHref.substring(SSHref.lastIndexOf('/') + 1));
+
+  document.getElementById("skin-switch").value = SSName;
+
+  function changeSkin() {
+    metaTag.href = SSHref.replace(SSName, event.target.value);
+  }
+</script>
