--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,7 +44,7 @@
   }
 </script>
 
-<div class="sub-footer">
+<!-- <div class="sub-footer">
   <div id="skin-switch-container">
     This page was rendered with the <select id="skin-switch" onchange="changeSkin()">
       {%- for skin in page.available_skins %}
@@ -69,4 +69,4 @@
   function changeSkin() {
     metaTag.href = SSHref.replace(SSName, event.target.value);
   }
-</script>
+</script> -->
