--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: base
 ---
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
@@ -33,7 +33,7 @@ layout: default
   {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
   {%- endif -%}
-  
+
   <script src="https://utteranc.es/client.js"
     repo="blebon/blebon.github.io"
     issue-term="pathname"
@@ -41,6 +41,6 @@ layout: default
     crossorigin="anonymous"
     async>
   </script>
-  
+
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
